# Fractal_fragments

./: .gitignore  README.md
mandelbrot_simple/: CMakeLists.txt  main.c
mandelbrot_simple/libs/: CMakeLists.txt  complex.c  complex.h
mandelbrot_simple/src/: complex.h  main.c
